--- a/res/layout/cart_list_item.xml
+++ b/res/layout/cart_list_item.xml
@@ -11,53 +11,49 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
      android:layout_margin="10dp"
+     android:weightSum="100"
     >
     
    
 
             <TextView
                 android:id="@+id/cart_list_tv_title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="11"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceMedium" 
-               
+               android:layout_weight="45"
                 android:textStyle="bold"/>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
 
             
         
           
             <TextView
                 android:id="@+id/cart_list_tv_count"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:layout_weight="15"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
            
 
-             <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/cart_list_tv_price"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:layout_weight="30"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
              <ImageView
                 android:id="@+id/cart_list_btn_del"
                 
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_weight="10"
                 android:src="@drawable/select_cart_del"
                 />
             </LinearLayout>
