--- a/res/drawable/select_main_other_addr_corner.xml
+++ b/res/drawable/select_main_other_addr_corner.xml
@@ -2,21 +2,21 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_selected="true"><shape>
-            <solid android:color="@color/tab_focus_on" />
+            <solid android:color="@color/white" />
 
             <corners android:radius="5dip" />
 
             <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
         </shape></item>
     <item android:state_pressed="true"><shape>
-            <solid android:color="@color/tab_focus_off" />
+            <solid android:color="@color/gray" />
 
             <corners android:radius="5dip" />
 
             <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
         </shape></item>
     <item android:state_focused="true"><shape>
-            <solid android:color="@color/tab_focus_off" />
+            <solid android:color="@color/gray" />
 
             <corners android:radius="5dip" />
 
