--- a/res/layout/activity_cart.xml
+++ b/res/layout/activity_cart.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="@string/menu_insert" 
-            android:background="@drawable/corner_red"
+            android:background="@drawable/selector_red_corner"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:layout_marginRight="5dp"
