--- a/res/layout/activity_send_order.xml
+++ b/res/layout/activity_send_order.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -239,4 +246,7 @@
             android:background="@drawable/select_main_other_addr_corner"/>
 
    </LinearLayout>
+      
+
 </LinearLayout>
+</ScrollView>
