--- a/res/layout/fragment_store.xml
+++ b/res/layout/fragment_store.xml
@@ -22,8 +22,8 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-             android:background="@color/white"
-               android:text="메뉴"
+             	android:background="@drawable/btn_on_off"
+               	android:text="메뉴"
                
                 
                
@@ -35,8 +35,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="맛집 정보"
-                android:background="@color/white"
-                 android:layout_gravity="bottom"
+                android:background="@drawable/btn_on_off"
+                android:layout_gravity="bottom"
                
                
                  />
