--- a/res/layout/tab_setdistance.xml
+++ b/res/layout/tab_setdistance.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/tab_focus_on" >
+    android:background="@color/white" >
         <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
