--- a/res/layout/activity_cart.xml
+++ b/res/layout/activity_cart.xml
@@ -72,7 +72,15 @@
           android:layout_height="0dp"
           android:layout_weight="20"
           android:orientation="vertical" >
-
+  <TextView
+            android:id="@+id/cart_tv_order_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="최소주문금액 :"
+              android:layout_gravity="right"
+              android:layout_marginRight="15dp"
+            android:textColor="@color/gray"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <TextView
             android:id="@+id/cart_tv_order_sum"
             android:layout_width="wrap_content"
