--- a/res/layout/setaddr_list_item.xml
+++ b/res/layout/setaddr_list_item.xml
@@ -42,6 +42,8 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:background="@drawable/select_main_other_addr_corner"
             android:text="선택" />
      
 </LinearLayout>
